# vscsm

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.noauto  README  configure  configure.ac
etc/: vscsm.cfg
src/: loop.c  onetwo.c  startserv.c  vscsm.c
web/: index.php  load.php  newlayout.css  srvcommand.php  test
web/img/: tab.xcf
